# trt_yolo

./: CMakeLists.txt  LICENSE  main.cpp  mish.cu  mish_plugin.cpp  nms.cu  nms_plugin.cpp  yolo_layer.cu  yolo_layer_plugin.cpp
include/: cuda_utils.h  mish_plugin.hpp  nms.h  nms_plugin.hpp  yolo_layer.h  yolo_layer_plugin.hpp
